--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.0.9",
     "node-fetch": "^3.0.0",
+    "node-resque": "^9.1.1",
     "nodemon": "^2.0.13",
-    "pluralize": "^8.0.0"
+    "pluralize": "^8.0.0",
+    "redis": "^3.1.2"
   }
 }
