--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "@bugsnag/js": "^7.1.1",
-    "apollo-server": "^3.3.0",
+    "apollo-server-core": "^3.4.0",
+    "apollo-server-express": "^3.4.0",
     "compression": "^1.7.4",
     "dotenv": "^6.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.6.1",
+    "graphql": "^16.0.1",
     "graphql-type-json": "^0.3.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.0.9",
