--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server-core": "^3.4.0",
     "apollo-server-express": "^3.4.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
